modelica_builder/modelica_parser/modelicaParser.py
"""
****************************************************************************************************
:copyright (c) 2020, Alliance for Sustainable Energy, LLC.
All rights reserved.
****************************************************************************************************
"""


# Generated from /var/antlrResult/modelica.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class modelicaParser ( Parser ):

    grammarFileName = "modelica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'within'", "';'", "'final'", "'encapsulated'", 
                     "'partial'", "'class'", "'model'", "'operator'", "'record'", 
                     "'block'", "'expandable'", "'connector'", "'type'", 
                     "'package'", "'pure'", "'impure'", "'function'", "'end'", 
                     "'extends'", "'='", "'enumeration'", "'('", "':'", 
                     "')'", "'der'", "','", "'public'", "'protected'", "'external'", 
                     "'redeclare'", "'inner'", "'outer'", "'replaceable'", 
                     "'import'", "'.*'", "'.{'", "'}'", "'constrainedby'", 
                     "'flow'", "'stream'", "'discrete'", "'parameter'", 
                     "'constant'", "'input'", "'output'", "'if'", "':='", 
                     "'each'", "'initial'", "'equation'", "'algorithm'", 
                     "'break'", "'return'", "'then'", "'elseif'", "'else'", 
                     "'for'", "'loop'", "'in'", "'while'", "'when'", "'elsewhen'", 
                     "'connect'", "'or'", "'and'", "'not'", "'<'", "'<='", 
                     "'>'", "'>='", "'=='", "'<>'", "'+'", "'-'", "'.+'", 
                     "'.-'", "'*'", "'/'", "'./'", "'^'", "'.^'", "'false'", 
                     "'true'", "'['", "']'", "'{'", "'.'", "'annotation'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "IDENT", "STRING", "UNSIGNED_NUMBER", 
                      "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_stored_definition = 0
    RULE_class_definition = 1
    RULE_class_specifier = 2
    RULE_class_prefixes = 3
    RULE_long_class_specifier = 4
    RULE_short_class_specifier = 5
    RULE_der_class_specifier = 6
    RULE_base_prefix = 7
    RULE_enum_list = 8
    RULE_enumeration_literal = 9
    RULE_composition = 10
    RULE_language_specification = 11
    RULE_external_function_call = 12
    RULE_element_list = 13
    RULE_element = 14
    RULE_import_clause = 15
    RULE_import_list = 16
    RULE_extends_clause = 17
    RULE_constraining_clause = 18
    RULE_component_clause = 19
    RULE_type_prefix = 20
    RULE_type_specifier = 21
    RULE_component_list = 22
    RULE_component_declaration = 23
    RULE_condition_attribute = 24
    RULE_declaration = 25
    RULE_modification = 26
    RULE_class_modification = 27
    RULE_argument_list = 28
    RULE_argument = 29
    RULE_element_modification_or_replaceable = 30
    RULE_element_modification = 31
    RULE_element_redeclaration = 32
    RULE_element_replaceable = 33
    RULE_component_clause1 = 34
    RULE_component_declaration1 = 35
    RULE_short_class_definition = 36
    RULE_equation_section = 37
    RULE_algorithm_section = 38
    RULE_equation = 39
    RULE_statement = 40
    RULE_if_equation = 41
    RULE_if_statement = 42
    RULE_for_equation = 43
    RULE_for_statement = 44
    RULE_for_indices = 45
    RULE_for_index = 46
    RULE_while_statement = 47
    RULE_when_equation = 48
    RULE_when_statement = 49
    RULE_connect_clause = 50
    RULE_expression = 51
    RULE_simple_expression = 52
    RULE_logical_expression = 53
    RULE_logical_term = 54
    RULE_logical_factor = 55
    RULE_relation = 56
    RULE_rel_op = 57
    RULE_arithmetic_expression = 58
    RULE_add_op = 59
    RULE_term = 60
    RULE_mul_op = 61
    RULE_factor = 62
    RULE_primary = 63
    RULE_name = 64
    RULE_component_reference = 65
    RULE_function_call_args = 66
    RULE_function_arguments = 67
    RULE_named_arguments = 68
    RULE_named_argument = 69
    RULE_function_argument = 70
    RULE_output_expression_list = 71
    RULE_expression_list = 72
    RULE_array_subscripts = 73
    RULE_subscript = 74
    RULE_comment = 75
    RULE_string_comment = 76
    RULE_annotation = 77

    ruleNames =  [ "stored_definition", "class_definition", "class_specifier", 
                   "class_prefixes", "long_class_specifier", "short_class_specifier", 
                   "der_class_specifier", "base_prefix", "enum_list", "enumeration_literal", 
                   "composition", "language_specification", "external_function_call", 
                   "element_list", "element", "import_clause", "import_list", 
                   "extends_clause", "constraining_clause", "component_clause", 
                   "type_prefix", "type_specifier", "component_list", "component_declaration", 
                   "condition_attribute", "declaration", "modification", 
                   "class_modification", "argument_list", "argument", "element_modification_or_replaceable", 
                   "element_modification", "element_redeclaration", "element_replaceable", 
                   "component_clause1", "component_declaration1", "short_class_definition", 
                   "equation_section", "algorithm_section", "equation", 
                   "statement", "if_equation", "if_statement", "for_equation", 
                   "for_statement", "for_indices", "for_index", "while_statement", 
                   "when_equation", "when_statement", "connect_clause", 
                   "expression", "simple_expression", "logical_expression", 
                   "logical_term", "logical_factor", "relation", "rel_op", 
                   "arithmetic_expression", "add_op", "term", "mul_op", 
                   "factor", "primary", "name", "component_reference", "function_call_args", 
                   "function_arguments", "named_arguments", "named_argument", 
                   "function_argument", "output_expression_list", "expression_list", 
                   "array_subscripts", "subscript", "comment", "string_comment", 
                   "annotation" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    IDENT=89
    STRING=90
    UNSIGNED_NUMBER=91
    WS=92
    COMMENT=93
    LINE_COMMENT=94

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Stored_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(modelicaParser.Class_definitionContext)
            else:
                return self.getTypedRuleContext(modelicaParser.Class_definitionContext,i)


        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(modelicaParser.NameContext)
            else:
                return self.getTypedRuleContext(modelicaParser.NameContext,i)


        def getRuleIndex(self):
            return modelicaParser.RULE_stored_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStored_definition" ):
                listener.enterStored_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStored_definition" ):
                listener.exitStored_definition(self)




    def stored_definition(self):

        localctx = modelicaParser.Stored_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_stored_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==modelicaParser.T__0:
                self.state = 156
                self.match(modelicaParser.T__0)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==modelicaParser.T__86 or _la==modelicaParser.IDENT:
                    self.state = 157
                    self.name()


                self.state = 160
                self.match(modelicaParser.T__1)
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << modelicaParser.T__2) | (1 << modelicaParser.T__3) | (1 << modelicaParser.T__4) | (1 << modelicaParser.T__5) | (1 << modelicaParser.T__6) | (1 << modelicaParser.T__7) | (1 << modelicaParser.T__8) | (1 << modelicaParser.T__9) | (1 << modelicaParser.T__10) | (1 << modelicaParser.T__11) | (1 << modelicaParser.T__12) | (1 << modelicaParser.T__13) | (1 << modelicaParser.T__14) | (1 << modelicaParser.T__15) | (1 << modelicaParser.T__16))) != 0):
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==modelicaParser.T__2:
                    self.state = 166
                    self.match(modelicaParser.T__2)


                self.state = 169
                self.class_definition()
                self.state = 170
                self.match(modelicaParser.T__1)
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_prefixes(self):
            return self.getTypedRuleContext(modelicaParser.Class_prefixesContext,0)


        def class_specifier(self):
            return self.getTypedRuleContext(modelicaParser.Class_specifierContext,0)


        def getRuleIndex(self):
            return modelicaParser.RULE_class_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_definition" ):
                listener.enterClass_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_definition" ):
                listener.exitClass_definition(self)




    def class_definition(self):

        localctx = modelicaParser.Class_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==modelicaParser.T__3:
                self.state = 177
                self.match(modelicaParser.T__3)


            self.state = 180
            self.class_prefixes()
            self.state = 181
            self.class_specifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_specifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def long_class_specifier(self):
            return self.getTypedRuleContext(modelicaParser.Long_class_specifierContext,0)


        def short_class_specifier(self):
            return self.getTypedRuleContext(modelicaParser.Short_class_specifierContext,0)


        def der_class_specifier(self):
            return self.getTypedRuleContext(modelicaParser.Der_class_specifierContext,0)


        def getRuleIndex(self):
            return modelicaParser.RULE_class_specifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_specifier" ):
                listener.enterClass_specifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_specifier" ):
                listener.exitClass_specifier(self)




    def class_specifier(self):

        localctx = modelicaParser.Class_specifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_specifier)
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.long_class_specifier()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.short_class_specifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 185
                self.der_class_specifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_prefixesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return modelicaParser.RULE_class_prefixes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_prefixes" ):
                listener.enterClass_prefixes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_prefixes" ):
                listener.exitClass_prefixes(self)




    def class_prefixes(self):

        localctx = modelicaParser.Class_prefixesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_prefixes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==modelicaParser.T__4:
                self.state = 188
                self.match(modelicaParser.T__4)


            self.state = 212
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 191
                self.match(modelicaParser.T__5)
                pass

            elif la_ == 2:
                self.state = 192
                self.match(modelicaParser.T__6)
                pass

            elif la_ == 3:
                self.state = 194
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==modelicaParser.T__7:
                    self.state = 193
                    self.match(modelicaParser.T__7)


                self.state = 196
                self.match(modelicaParser.T__8)
                pass

            elif la_ == 4:
                self.state = 197
                self.match(modelicaParser.T__9)
                pass

            elif la_ == 5:
                self.state = 199
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==modelicaParser.T__10:
                    self.state = 198
                    self.match(modelicaParser.T__10)


                self.state = 201
                self.match(modelicaParser.T__11)
                pass

            elif la_ == 6:
                self.state = 202
                self.match(modelicaParser.T__12)
                pass

            elif la_ == 7:
                self.state = 203
                self.match(modelicaParser.T__13)
                pass

            elif la_ == 8:
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==modelicaParser.T__14 or _la==modelicaParser.T__15:
                    self.state = 204
                    _la = self._input.LA(1)
                    if not(_la==modelicaParser.T__14 or _la==modelicaParser.T__15):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 208
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==modelicaParser.T__7:
                    self.state = 207
                    self.match(modelicaParser.T__7)


                self.state = 210
                self.match(modelicaParser.T__16)
                pass

            elif la_ == 9:
                self.state = 211
                self.match(modelicaParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Long_class_specifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(modelicaParser.IDENT)
            else:
                return self.getToken(modelicaParser.IDENT, i)

        def string_comment(self):
            return self.getTypedRuleContext(modelicaParser.String_commentContext,0)


        def composition(self):
            return self.getTypedRuleContext(modelicaParser.CompositionContext,0)


        def class_modification(self):
            return self.getTypedRuleContext(modelicaParser.Class_modificationContext,0)


        def getRuleIndex(self):
            return modelicaParser.RULE_long_class_specifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLong_class_specifier" ):
                listener.enterLong_class_specifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLong_class_specifier" ):
                listener.exitLong_class_specifier(self)




    def long_class_specifier(self):

        localctx = modelicaParser.Long_class_specifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_long_class_specifier)
        self._la = 0 # Token type
        try:
            self.state = 230
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [modelicaParser.IDENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 214
                self.match(modelicaParser.IDENT)
                self.state = 215
                self.string_comment()
                self.state = 216
                self.composition()
                self.state = 217
                self.match(modelicaParser.T__17)
                self.state = 218
                self.match(modelicaParser.IDENT)
                pass
            elif token in [modelicaParser.T__18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 220
                self.match(modelicaParser.T__18)
                self.state = 221
                self.match(modelicaParser.IDENT)
                self.state = 223
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==modelicaParser.T__21:
                    self.state = 222
                    self.class_modification()


                self.state = 225
                self.string_comment()
                self.state = 226
                self.composition()
                self.state = 227
                self.match(modelicaParser.T__17)
                self.state = 228
                self.match(modelicaParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Short_class_specifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(modelicaParser.IDENT, 0)

        def base_prefix(self):
            return self.getTypedRuleContext(modelicaParser.Base_prefixContext,0)


        def name(self):
            return self.getTypedRuleContext(modelicaParser.NameContext,0)


        def comment(self):
            return self.getTypedRuleContext(modelicaParser.CommentContext,0)


        def array_subscripts(self):
            return self.getTypedRuleContext(modelicaParser.Array_subscriptsContext,0)


        def class_modification(self):
            return self.getTypedRuleContext(modelicaParser.Class_modificationContext,0)


        def enum_list(self):
            return self.getTypedRuleContext(modelicaParser.Enum_listContext,0)


        def getRuleIndex(self):
            return modelicaParser.RULE_short_class_specifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShort_class_specifier" ):
                listener.enterShort_class_specifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShort_class_specifier" ):
                listener.exitShort_class_specifier(self)




    def short_class_specifier(self):

        localctx = modelicaParser.Short_class_specifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_short_class_specifier)
        self._la = 0 # Token type
        try:
            self.state = 256
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 232
                self.match(modelicaParser.IDENT)
                self.state = 233
                self.match(modelicaParser.T__19)
                self.state = 234
                self.base_prefix()
                self.state = 235
                self.name()
                self.state = 237
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==modelicaParser.T__83:
                    self.state = 236
                    self.array_subscripts()


                self.state = 240
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==modelicaParser.T__21:
                    self.state = 239
                    self.class_modification()


                self.state = 242
                self.comment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 244
                self.match(modelicaParser.IDENT)
                self.state = 245
                self.match(modelicaParser.T__19)
                self.state = 246
                self.match(modelicaParser.T__20)
                self.state = 247
                self.match(modelicaParser.T__21)
                self.state = 252
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [modelicaParser.T__23, modelicaParser.IDENT]:
                    self.state = 249
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==modelicaParser.IDENT:
                        self.state = 248
                        self.enum_list()


                    pass
                elif token in [modelicaParser.T__22]:
                    self.state = 251
                    self.match(modelicaParser.T__22)
                    pass
                else:
                    raise NoViableAltException(self)
